--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Lotushaven</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="store_869636.ico" />
+    <link rel="icon" type="image/x-icon" href="cart-shopping-solid.svg" />
   </head>
   <body>
     <app-root></app-root>
